tests/invalid/lookup_in_class.prsm
// E013: 'child' and 'parent' lookups are only valid inside component declarations
class LookupInClass {
    child muzzle: Transform
    parent vehicle: Vehicle
}
